<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/quiz_mark"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_latestone"
            android:icon="@drawable/tech1"
            android:title="@string/menu_latest1" />
        <item
            android:id="@+id/nav_latesttwo"
            android:icon="@drawable/tech2"
            android:title="@string/menu_latest2" />
        <item
            android:id="@+id/nav_latestthree"
            android:icon="@drawable/programming_icon"
            android:title="@string/menu_latest3" />
    </group>
</menu>